// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Updates/> Test with snapshot delayed. 1`] = `
<form>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="14"
      >
        Enable automatic updates (recommended)
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        id="14"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <h4>
    Update approvals
  </h4>
  <p>
    Update approvals can be useful when you want to make sure that updates won't harm your specific
            configuration. You can e.g. install updates when you're prepared for a possible rollback to a previous
            snapshot and deny the questionable update temporarily. It isn't possible to decline the update forever an
            it will be offered to you again together with the next package installation.
  </p>
  <div
    class="form-group row"
    id="18"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="18"
      />
    </div>
    <div
      class="col-sm-8"
    >
      <div
        class="form-check form-check-inline"
      >
        <input
          class="form-check-input"
          id="approvals-0"
          name="approvals"
          type="radio"
          value="off"
        />
        <label
          class="form-check-label"
          for="approvals-0"
        >
          Automatic installation
        </label>
      </div>
      <small
        class="form-text text-muted"
      >
        Updates will be installed without user's intervention.
      </small>
      <div
        class="form-check form-check-inline"
      >
        <input
          class="form-check-input"
          id="approvals-1"
          name="approvals"
          type="radio"
          value="delayed"
        />
        <label
          class="form-check-label"
          for="approvals-1"
        >
          Delayed updates
        </label>
      </div>
      <small
        class="form-text text-muted"
      >
        Updates will be installed with an adjustable delay. You can also approve them manually.
      </small>
      <div
        class="form-check form-check-inline"
      >
        <input
          checked=""
          class="form-check-input"
          id="approvals-2"
          name="approvals"
          type="radio"
          value="on"
        />
        <label
          class="form-check-label"
          for="approvals-2"
        >
          Update approval needed
        </label>
      </div>
      <small
        class="form-text text-muted"
      >
        You have to approve the updates, otherwise they won't be installed.
      </small>
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="23"
    >
      Delayed updates (hours)
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="23"
          max="168"
          min="1"
          type="number"
          value="1"
        />
      </div>
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <h4>
    Automatic restarts after software update
  </h4>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="15"
    >
      Delay (days)
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="15"
          max="10"
          min="0"
          type="number"
          value="4"
        />
      </div>
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      >
        Number of days that must pass between receiving the request for restart and the automatic restart itself.
      </small>
    </div>
  </div>
  <div
    class="rdt"
  >
    <div>
      <div
        class="form-group row"
      >
        <label
          class="form-control-label col-sm-3"
          for="16"
        >
          Reboot time
        </label>
        <div
          class="col-sm-8"
        >
          <div
            class="input-group"
          >
            <input
              class="form-control "
              id="16"
              type="text"
              value="04:30"
            />
          </div>
          <div
            class="invalid-feedback"
          />
          <small
            class="form-text text-muted"
          >
            Time of day of automatic reboot in HH:MM format.
          </small>
        </div>
      </div>
    </div>
    <div
      class="rdtPicker"
    >
      <div
        class="rdtTime"
      >
        <table>
          <tbody>
            <tr>
              <td>
                <div
                  class="rdtCounters"
                >
                  <div
                    class="rdtCounter"
                  >
                    <span
                      class="rdtBtn"
                    >
                      ▲
                    </span>
                    <div
                      class="rdtCount"
                    >
                      4
                    </div>
                    <span
                      class="rdtBtn"
                    >
                      ▼
                    </span>
                  </div>
                  <div
                    class="rdtCounterSeparator"
                  >
                    :
                  </div>
                  <div
                    class="rdtCounter"
                  >
                    <span
                      class="rdtBtn"
                    >
                      ▲
                    </span>
                    <div
                      class="rdtCount"
                    >
                      30
                    </div>
                    <span
                      class="rdtBtn"
                    >
                      ▼
                    </span>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <button
    class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
  >
     
     
    Save
  </button>
</form>
`;

exports[`<Updates/> Test with snapshot disabled. 1`] = `
<form>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="1"
      >
        Enable automatic updates (recommended)
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        disabled=""
        id="1"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <h4>
    Automatic restarts after software update
  </h4>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="2"
    >
      Delay (days)
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          disabled=""
          id="2"
          max="10"
          min="0"
          type="number"
          value="4"
        />
      </div>
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      >
        Number of days that must pass between receiving the request for restart and the automatic restart itself.
      </small>
    </div>
  </div>
  <div
    class="rdt"
  >
    <div>
      <div
        class="form-group row"
      >
        <label
          class="form-control-label col-sm-3"
          for="3"
        >
          Reboot time
        </label>
        <div
          class="col-sm-8"
        >
          <div
            class="input-group"
          >
            <input
              class="form-control "
              disabled=""
              id="3"
              type="text"
              value="04:30"
            />
          </div>
          <div
            class="invalid-feedback"
          />
          <small
            class="form-text text-muted"
          >
            Time of day of automatic reboot in HH:MM format.
          </small>
        </div>
      </div>
    </div>
    <div
      class="rdtPicker"
    >
      <div
        class="rdtTime"
      >
        <table>
          <tbody>
            <tr>
              <td>
                <div
                  class="rdtCounters"
                >
                  <div
                    class="rdtCounter"
                  >
                    <span
                      class="rdtBtn"
                    >
                      ▲
                    </span>
                    <div
                      class="rdtCount"
                    >
                      4
                    </div>
                    <span
                      class="rdtBtn"
                    >
                      ▼
                    </span>
                  </div>
                  <div
                    class="rdtCounterSeparator"
                  >
                    :
                  </div>
                  <div
                    class="rdtCounter"
                  >
                    <span
                      class="rdtBtn"
                    >
                      ▲
                    </span>
                    <div
                      class="rdtCount"
                    >
                      30
                    </div>
                    <span
                      class="rdtBtn"
                    >
                      ▼
                    </span>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <button
    class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
    disabled=""
  >
    <span
      aria-hidden="true"
      class="spinner-border spinner-border-sm"
      role="status"
    />
     
     
     
    Restarting after %d sec.
  </button>
</form>
`;

exports[`<Updates/> Test with snapshot enabled. 1`] = `
<form>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="7"
      >
        Enable automatic updates (recommended)
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        id="7"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <h4>
    Update approvals
  </h4>
  <p>
    Update approvals can be useful when you want to make sure that updates won't harm your specific
            configuration. You can e.g. install updates when you're prepared for a possible rollback to a previous
            snapshot and deny the questionable update temporarily. It isn't possible to decline the update forever an
            it will be offered to you again together with the next package installation.
  </p>
  <div
    class="form-group row"
    id="11"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="11"
      />
    </div>
    <div
      class="col-sm-8"
    >
      <div
        class="form-check form-check-inline"
      >
        <input
          class="form-check-input"
          id="approvals-0"
          name="approvals"
          type="radio"
          value="off"
        />
        <label
          class="form-check-label"
          for="approvals-0"
        >
          Automatic installation
        </label>
      </div>
      <small
        class="form-text text-muted"
      >
        Updates will be installed without user's intervention.
      </small>
      <div
        class="form-check form-check-inline"
      >
        <input
          class="form-check-input"
          id="approvals-1"
          name="approvals"
          type="radio"
          value="delayed"
        />
        <label
          class="form-check-label"
          for="approvals-1"
        >
          Delayed updates
        </label>
      </div>
      <small
        class="form-text text-muted"
      >
        Updates will be installed with an adjustable delay. You can also approve them manually.
      </small>
      <div
        class="form-check form-check-inline"
      >
        <input
          checked=""
          class="form-check-input"
          id="approvals-2"
          name="approvals"
          type="radio"
          value="on"
        />
        <label
          class="form-check-label"
          for="approvals-2"
        >
          Update approval needed
        </label>
      </div>
      <small
        class="form-text text-muted"
      >
        You have to approve the updates, otherwise they won't be installed.
      </small>
      <small
        class="form-text text-muted"
      />
    </div>
  </div>
  <h4>
    Automatic restarts after software update
  </h4>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="8"
    >
      Delay (days)
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="8"
          max="10"
          min="0"
          type="number"
          value="4"
        />
      </div>
      <div
        class="invalid-feedback"
      />
      <small
        class="form-text text-muted"
      >
        Number of days that must pass between receiving the request for restart and the automatic restart itself.
      </small>
    </div>
  </div>
  <div
    class="rdt"
  >
    <div>
      <div
        class="form-group row"
      >
        <label
          class="form-control-label col-sm-3"
          for="9"
        >
          Reboot time
        </label>
        <div
          class="col-sm-8"
        >
          <div
            class="input-group"
          >
            <input
              class="form-control "
              id="9"
              type="text"
              value="04:30"
            />
          </div>
          <div
            class="invalid-feedback"
          />
          <small
            class="form-text text-muted"
          >
            Time of day of automatic reboot in HH:MM format.
          </small>
        </div>
      </div>
    </div>
    <div
      class="rdtPicker"
    >
      <div
        class="rdtTime"
      >
        <table>
          <tbody>
            <tr>
              <td>
                <div
                  class="rdtCounters"
                >
                  <div
                    class="rdtCounter"
                  >
                    <span
                      class="rdtBtn"
                    >
                      ▲
                    </span>
                    <div
                      class="rdtCount"
                    >
                      4
                    </div>
                    <span
                      class="rdtBtn"
                    >
                      ▼
                    </span>
                  </div>
                  <div
                    class="rdtCounterSeparator"
                  >
                    :
                  </div>
                  <div
                    class="rdtCounter"
                  >
                    <span
                      class="rdtBtn"
                    >
                      ▲
                    </span>
                    <div
                      class="rdtCount"
                    >
                      30
                    </div>
                    <span
                      class="rdtBtn"
                    >
                      ▼
                    </span>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <button
    class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
  >
     
     
    Save
  </button>
</form>
`;
